# agent-orchestration

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.pip  Dockerfile.uv  README.md  docker-compose.yml  example.env  main.py  publisher.py  pyproject.toml  requirements.txt
agents/: client.py  logger.py  main.py  readme.md
api/: Dockerfile  main.py
api/core/: config.py
api/routes/: tasks.py
app/: Dockerfile  llm_client.py  logger.py  main.py  server_config.lead_agent.json  tasks.py
app/api/v1/: tasks.py
app/api/v1/api_types/: __init__.py  tasks.py
app/handlers/: __init__.py  database.py  rabbitmq.py
database/: alembic.ini
database/agent_db/: db.py  models.py
database/agent_db/versions/: a4f776c374cc_initial_commit.py
database/agents/: env.py
database/agents/DAO/: task_dao.py
logging_service/: README.md  __init__.py  config.py  decorators.py  examples.py  service.py  utils.py
mq/: __init__.py  connection.py  consumer.py  publisher.py
servers/: filesystem.py
