[project]
name = "mulit-agent-sceduling-poc"
version = "0.1.0"
description = "Experimenting with scheduling AI-Agents"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "celery[rabbitmq]>=5.5.3",
    "dotenv>=0.9.9",
    "fastapi>=0.116.1",
    "groq>=0.30.0",
    "mcp>=1.12.2",
    "pydantic>=2.11.7",
    "python-json-logger>=3.3.0",
    "uvicorn[standard]>=0.35.0",
]
